core/src/hir/snapshots/diplomat_core__hir__attrs__tests__abi_compatibility_for_unsupported_backend.snap
---
source: core/src/hir/attrs.rs
expression: output
---
Lowering error in Foo::takes_mut: Method `Foo_takes_mut` takes a reference to a struct as a self parameter, which isn't allowed. Backend must support abi_compatibles.
