core/src/hir/snapshots/diplomat_core__hir__attrs__tests__auto.snap
---
source: core/src/hir/attrs.rs
expression: output
---
Lowering error in Opaque::next: `iterator` not supported in backend tests
