core/src/hir/snapshots/diplomat_core__hir__attrs__tests__callback_result_unsupported.snap
---
source: core/src/hir/attrs.rs
expression: output
---
Lowering error in Foo::callback_result: Backend does not support Result<> being returned for callbacks. Query with #[diplomat::attr(supports=fallible_traits_callbacks)].
Lowering error in Foo::callback_result: Backend does not support Option<> being returned for callbacks. Query with #[diplomat::attr(supports=fallible_traits_callbacks)].
Lowering error in X::resulting: Backend does not support Result<> being returned for callbacks. Query with #[diplomat::attr(supports=fallible_traits_callbacks)].
