core/src/hir/snapshots/diplomat_core__hir__attrs__tests__custom_include_fail_unsupported.snap
---
source: core/src/hir/attrs.rs
expression: output
---
Lowering error in IncludeDef::test: Custom bindings not supported by this language.
