core/src/hir/snapshots/diplomat_core__hir__attrs__tests__default_args_unsupport.snap
---
source: core/src/hir/attrs.rs
expression: output
---
Lowering error in Test::test: `default_args` not supported in backend tests
