core/src/hir/snapshots/diplomat_core__hir__attrs__tests__non_primitive_struct_slices_fails.snap
---
source: core/src/hir/attrs.rs
expression: output
---

Lowering error in Foo::takes_slice: TODO: insert error info here.